[gd_scene load_steps=7 format=3 uid="uid://bms6fvfbec2pt"]

[ext_resource type="Script" path="res://ui/screen.gd" id="1_ww8q6"]
[ext_resource type="FontFile" uid="uid://cj2bfbenla0y0" path="res://assets/Bonus/kenvector_future.ttf" id="1_xooj5"]
[ext_resource type="PackedScene" uid="uid://btnf3bbaaowe6" path="res://game/background.tscn" id="2_n3p66"]
[ext_resource type="PackedScene" uid="uid://n6qs4nhl40wl" path="res://ui/high_score_label.tscn" id="8_s5pgo"]
[ext_resource type="PackedScene" uid="uid://cf8nekl1scbjc" path="res://ui/credits.tscn" id="10_8gjp6"]

[sub_resource type="LabelSettings" id="LabelSettings_jejn0"]
font = ExtResource("1_xooj5")
font_size = 82

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ww8q6")

[node name="Background" parent="." instance=ExtResource("2_n3p66")]

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="Separator1" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cosmic Gateaway"
label_settings = SubResource("LabelSettings_jejn0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator2" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="C1Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
text = "C1"
icon_alignment = 1

[node name="Lvl1Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
text = "1"
icon_alignment = 1

[node name="Lvl2Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
disabled = true
text = "2"
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="C2Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
disabled = true
text = "C2"
icon_alignment = 1

[node name="Lvl3Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
disabled = true
text = "3"
icon_alignment = 1

[node name="Lvl4Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xooj5")
theme_override_font_sizes/font_size = 32
disabled = true
text = "4"
icon_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="SettingsButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xooj5")
text = "Settings"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xooj5")
text = "Quit"
icon_alignment = 1

[node name="Separator3" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HighScoreLabel" parent="Control/MarginContainer" instance=ExtResource("8_s5pgo")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Credits" parent="Control/MarginContainer" instance=ExtResource("10_8gjp6")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/C1Button" to="." method="_on_c_1_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Lvl1Button" to="." method="_on_lvl_1_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Lvl2Button" to="." method="_on_lvl_2_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/C2Button" to="." method="_on_c_2_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/Lvl3Button" to="." method="_on_lvl_3_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/Lvl4Button" to="." method="_on_lvl_4_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
